AUTOMAKE_OPTIONS = foreign
bin_PROGRAMS=fwdpp
SUBDIRS=fwdpp examples unit
ACLOCAL_AMFLAGS = -I m4
#  if you write a self-test script named `chk', uncomment the
#  following and add `chk' to the EXTRA_DIST list
#TESTS=chk
fwdpp_SOURCES=
EXTRA_DIST=doc/fwdpp.doxygen examples/*.cc examples/*.hpp examples/Makefile LICENSE
