pkgincludedir=$(prefix)/include/fwdpp

SUBDIRS=internal tags sugar gsl extensions io meta algorithm ts poptypes simfunctions
pkginclude_HEADERS=debug.hpp \
	diploid.hh \
	fitness_models.hpp \
	forward_types.hpp \
	forward_types_serialization.hpp \
	fwd_functional.hpp \
	insertion_policies.hpp \
	poisson_xover.hpp \
	general_rec_variation.hpp \
	sample_diploid.hpp \
	sample_diploid.tcc \
	sampling_functions.hpp \
	type_traits.hpp \
	util.hpp \
	version.hpp \
	mutate_recombine.hpp \
	data_matrix.hpp \
	recbinder.hpp \
	named_type.hpp \
	slocuspop.hpp \
	mlocuspop.hpp \
	popgenmut.hpp \
	simparams.hpp \
	wrapped_range.hpp



