pkgincludedir=$(prefix)/include/fwdpp

SUBDIRS=internal tags sugar gsl extensions io meta algorithm ts poptypes simfunctions genetic_map
pkginclude_HEADERS=debug.hpp \
	diploid.hh \
	fitness_models.hpp \
	forward_types.hpp \
	forward_types_serialization.hpp \
	fwd_functional.hpp \
	insertion_policies.hpp \
	sample_diploid.hpp \
	sample_diploid.tcc \
	sampling_functions.hpp \
	type_traits.hpp \
	util.hpp \
	version.hpp \
	mutate_recombine.hpp \
	data_matrix.hpp \
	recbinder.hpp \
	named_type.hpp \
	diploid_population.hpp \
	popgenmut.hpp \
	simparams.hpp \
	wrapped_range.hpp \
	GSLrng_t.hpp \
	gsl_discrete.hpp



